deploy/basic-traffic-routing/done/name-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: name-route
spec:
  hosts:
  - name
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: name-v1
  - route:
    - destination:
        host: name-v2
